--- a/Scheduler.Database.Core/Scheduler.Database.Core.csproj
+++ b/Scheduler.Database.Core/Scheduler.Database.Core.csproj
@@ -4,6 +4,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
+    <PackageReference Include="System" Version="4.1.0311.2" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Scheduler.Database.API\Scheduler.Database.API.csproj" />
   </ItemGroup>
 </Project>
