--- a/Scheduler.Database.Core/Scheduler.Database.Core.csproj
+++ b/Scheduler.Database.Core/Scheduler.Database.Core.csproj
@@ -3,12 +3,20 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
-    <PackageReference Include="System" Version="4.1.0311.2" />
-    <PackageReference Include="System.Collections" Version="4.3.0" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3"/>
+    <PackageReference Include="System.Collections" Version="4.3.0"/>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.7.0"/>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Scheduler.Database.API\Scheduler.Database.API.csproj" />
+    <ProjectReference Include="..\Scheduler.Database.API\Scheduler.Database.API.csproj"/>
   </ItemGroup>
 </Project>
